<resources>

    <string name="app_name">Odbyt</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_create_seller">Create Seller</string>
    <string name="title_activity_modify_seller">Modify Seller</string>
    <string name="title_activity_create_customer">Create Customer</string>
    <string name="title_activity_modify_customer">Modify Customer</string>
    <string name="title_activity_delete_customers">Delete Customers</string>
    <string name="title_activity_finished_purachase">Finished Purachase</string>
    <string name="title_activity_paying_purachase">Paying Purachase</string>
    <string name="title_activity_customer_details">Customer Details</string>
    <string name="title_activity_create_product">Create Product</string>
    <string name="title_activity_modify_product">Modify Product</string>
    <string name="title_activity_delete_products">Delete Products</string>
    <string name="title_activity_product_details">Product Details</string>
    <string name="title_activity_payments">Payments</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_reports_by">Reports by</string>
    
    <string name="homeCustomers_Text">Customers</string>
    <string name="homeProducts_Text">Products</string>
    <string name="homePayments_Text">Payments</string>
    <string name="homeReports_Text">Reports</string>
    <string name="homeSync_Text">Sync</string>
    <string name="homePrefs_Text">Preferences</string>
    
    <string name="customer_Text">Customer</string>
    <string name="date_Text">Date</string>
    <string name="finished_Text">Finished</string>
    <string name="make_payment_Text">Make Payment</string>
    <string name="make_sell_Text">Make Sell</string>
    <string name="product_Text">Product</string>
    <string name="payed_Text">Payed</string>
    <string name="paying_Text">Paying</string>
    <string name="payment_Text">Payment</string>
    <string name="purachase_id_Text">Purachase Id</string>
    <string name="remaining_Text">Remaining</string>
    <string name="state_Text">State</string>
    <string name="total_Text">Total</string>

    <string name="txtUsername_Hint">Username</string>
    <string name="txtPassword_Hint">Password</string>
    <string name="btnLogin_Text">Log In</string>
    <string name="lblCreateAccount_Text">Create Account</string>
    <string name="lblImportData_Text">Import Data</string>
	
    <string name="lblRequiredField_Text">*</string>
    
    <string name="txtName_Hint">Name</string>
    <string name="txtLastName_Hint">LastName</string>
    <string name="txtAddress_Hint">Address</string>
    <string name="txtCity_Hint">City</string>
    <string name="txtState_Hint">State</string>
    <string name="txtPhone_Hint">Phone</string>
    <string name="txtCellPhone_Hint">Cellphone</string>
    <string name="txtEmail_Hint">Email</string>
    
    <string name="txtPrice_Hint">Price</string>
    <string name="txtBrand_Hint">Brand</string>
    <string name="txtModel_Hint">Model</string>
    <string name="txtDesc_Hint">Description</string>
    
    <string name="simbol_$">$ </string>
    
    <string name="imgNoCustomers_ContentDescription">No Customers</string>
    <string name="lblNoCustomers_Text">There are no customers created yet.</string>
    <string name="btnCreateCustomer_Text">Create Customer</string>
    <string name="lblCustomerState_Title">State:</string>
    <string name="txtSearchCustomers_Hint">Search Customers</string>
    
    <string name="imgNoProducts_ContentDescription">No Products</string>
    <string name="lblNoProducts_Text">There are no products created yet.</string>
    <string name="btnCreateProduct_Text">Create Product</string>
    <string name="lblProductBrand_Title">Brand: </string>
    <string name="txtSearchProducts_Hint">Search Products</string>
    
    <string name="header_customer_info">Customer Info</string>
    <string name="header_last_purchase_info">Last Purachase Info</string>
    <string name="header_next_payment">Next Payment</string>
    <string name="header_payments_history">Payments History</string>
    <string name="header_product_info">Product Info</string>
    <string name="header_customers_info">Customers Info</string>
    
    <string name="today_payments">Today Payments</string>
    <string name="next_payments">Next Payments</string>
    
    <string name="lblAllItems_Text">All</string>
    
    <string name="day_to_pass_Text">Day to pass</string>
    <string name="hour_to_pass_Text">Hour to pass</string>
    <string name="go_to_collect_Text">Go to collect</string>
    <string name="agreed_payment_Text">Agreed payment</string>
    <string name="down_payment_Text">Down payment</string>
    
    <string name="by_day_Text">By Day</string>
    <string name="by_month_Text">By Month</string>
    <string name="by_week_Text">By Week</string>
    <string name="day_Text">day</string>
    <string name="days_Text">Days</string>
    <string name="month_Text">month</string>
    <string name="months_Text">Months</string>
    <string name="week_Text">week</string>
    <string name="weeks_Text">Weeks</string>
    <string name="by_day_description_Text">It allows you to obtain a list of the payments days. By selecting a day of the list, it will generate a report of all the payments made in that day, with customer data, products data, etc.</string>
    <string name="by_month_description_Text">It allows you to obtain a list of the payments months. By selecting a month of the list, it will generate a report of all the payments made in that month, with customer data, products data, etc.</string>
    <string name="by_week_description_Text">It allows you to obtain a list of the payments weeks. By selecting a week of the list, it will generate a report of all the payments made in that week, with customer data, products data, etc.</string>
    
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    
    <!-- Dialog messages and titles -->
    <string name="delete_single_customer_message">Are you sure you want to delete this customer?</string>
    <string name="delete_sigle_customer_title">Deleting Customer</string>
    <string name="delete_selected_customers_message">Are you sure you want to delete the selected customers?</string>
    <string name="delete_selected_customers_title">Deleting Customers</string>
    
    <string name="delete_single_product_message">Are you sure you want to delete this product?</string>
    <string name="delete_sigle_product_title">Deleting Product</string>
    <string name="delete_selected_products_message">Are you sure you want to delete the selected products?</string>
    <string name="delete_selected_products_title">Deleting Products</string>
    
    <string name="sale_made_message">The sale has made successful.</string>
    <string name="payment_made_message">The payment has made successful.</string>
    
    <!-- Menu titles -->
    <string name="add_customer_menu">Add Customer</string>
    <string name="delete_customers_menu">Delete Customers</string>
    <string name="add_product_menu">Add Product</string>
    <string name="delete_products_menu">Delete Products</string>
    <string name="update_info_account_menu">Update Info Account</string>
    <string name="close_session_account_menu">Close Session</string>
    
    <string name="btnCancel_Text">Cancel</string>
    <string name="btnConfirm_Text">Confirm</string>
    <string name="btnCreate_Text">Create</string>
    <string name="btnDelete_Text">Delete</string>
    <string name="btnFinished_Text">Finished</string>
    <string name="btnGoBack_Text">Back</string>
    <string name="btnModify_Text">Modify</string>
    <string name="btnMorePayments_Text">More Payments</string>
    <string name="btnNext_Text">Next</string>
    <string name="btnPaying_Text">Paying</string>    
    <string name="btnSave_Text">Save</string>
</resources>