<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<ImageView
        android:layout_width="215dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/imgNoProducts_ContentDescription"
        android:scaleType="fitXY"
        android:src="@drawable/no_products" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/lblNoProducts_Text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCreateProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnCreateProduct_Text"
        android:textSize="20sp" />
</LinearLayout>