<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="215dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/imgNoCustomers_ContentDescription"
        android:scaleType="fitXY"
        android:src="@drawable/no_customers" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/lblNoCustomers_Text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCreateCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnCreateCustomer_Text"
        android:textSize="20sp" />

</LinearLayout>