<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/customer_Text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/Gray_Footer"
                android:textSize="17sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/date_Text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/Gray_Footer"
                android:textSize="17sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/payment_Text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/Gray_Footer"
                android:textSize="17sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnMakePayment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_payment_Text" />

</LinearLayout>